# CarDecidingSystem

./: CMakeLists.txt  CarsShortilists.cpp  InputHandler.cpp  main.cpp
include/: CarOptions.h  Command.h  ICarBuyingOptions.h  InputHandler.h
source/: CarsShortilists.cpp  Command.cpp  InputHandler.cpp
